--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,4 +1,4 @@
-@(message: String)
+@(message: String)(implicit request: play.api.mvc.Request[Any])
 
 @main("N.O.D.E.A.T.H Over Under") {
     <div class="row marketing">
