--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,27 +1,14 @@
-@(message: String)(implicit request: play.api.mvc.Request[Any])
+@(bets: List[models.Bet])(implicit request: play.api.mvc.Request[Any])
 
 @main("N.O.D.E.A.T.H Over Under") {
-    <div class="row marketing">
-        <div class="col-lg-6">
-            <h4>Subheading</h4>
-            <p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
-
-            <h4>Subheading</h4>
-            <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Cras mattis consectetur purus sit amet fermentum.</p>
-
-            <h4>Subheading</h4>
-            <p>Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
-        </div>
-
-        <div class="col-lg-6">
-            <h4>Subheading</h4>
-            <p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
-
-            <h4>Subheading</h4>
-            <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Cras mattis consectetur purus sit amet fermentum.</p>
-
-            <h4>Subheading</h4>
-            <p>Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
-        </div>
+@header()
+<div class="row marketing">
+    @for( bet <- bets ) {
+    <div class="col-xs-6">
+        <h4>@bet.title</h4>
+        <p>@bet.description</p>
+        <a href="@routes.Application.getBet(bet.id)"><button type="button" class="btn btn-info">Details</button></a>
     </div>
+    }
+</div>
 }
