--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -22,19 +22,13 @@
 </head>
 <body>
     <div class="container">
+
         <div class="header">
             <ul class="nav nav-pills pull-right">
                 <li @if(request.uri == "/") { class="active" }><a href="@routes.Application.index">Home</a></li>
-                <li @if(request.uri == "/create") { class="active" }><a href="@routes.Application.createNew">Create New</a></li>
-                <li @if(request.uri == "/login") { class="active" }><a href="@routes.Application.login">Login</a></li>
+                <li @if(request.uri == "/create") { class="active" }><a href="@routes.Application.createNewBet">Create Bet</a></li>
             </ul>
             <h3 class="text-muted">N.O.D.E.A.T.H Over Under</h3>
-        </div>
-
-        <div class="jumbotron">
-            <h1>N.O.D.E.A.T.H</h1>
-            <h2>Over Under</h2>
-            <p class="lead">Kitten Ipsum mercedes love cat kitties front purses she, kitten kittens adopted couch odd sleeping nap cat me meowlly healing.</p>
         </div>
 
         @content
