--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -26,7 +26,8 @@ body {
 
 /* Custom page footer */
 .footer {
-  padding-top: 19px;
+  margin-top: 15px;
+  padding-top: 10px;
   color: #777;
   border-top: 1px solid #e5e5e5;
 }
