--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,4 +1,4 @@
-@(bets: List[models.Bet])(implicit request: play.api.mvc.Request[Any])
+@(bets: List[viewmodels.Bet])(implicit request: play.api.mvc.Request[Any])
 
 @main("N.O.D.E.A.T.H Over Under") {
 @header()
