working on websockets

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -4,7 +4,7 @@
 @header()
 <div class="row marketing">
     @for( bet <- bets ) {
-    <div class="col-xs-6">
+    <div class="col-xs-6 bet-container" data-bet-id="@bet.id">
         <h4>@bet.title</h4>
         <p>@bet.description</p>
         <a href="@routes.Application.placeBet(bet.id)"><button type="button" class="btn btn-info">Make Bet</button></a>
