attempting to add websockets

--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -38,6 +38,7 @@
         </div>
 
     </div> <!-- /container -->
+    <script src="@routes.Assets.at("javascripts/WebSocket.js")"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
     <script src="@routes.Assets.at("javascripts/index.js")"></script>
